Font-size media queries

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <section class="contact" id="contact">
         <div class="fade-in" id="contactContent">
           <h3>Contact</h3>
-          <p>Feel free to send me a message!</p>
+          <p class="contacttext">Feel free to send me a message!</p>
           <a class="mailtoui" href="mailto:elise.philipsson@gmail.com">Get in touch</a>
       </section>
     </main>
